--- a/web/index.html
+++ b/web/index.html
@@ -2,12 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Тестовое вэб приложение Java-Resumes</title>
+    <meta http-equiv="refresh" content="0; url=resume" />
 </head>
 <body>
-<header>Тестовое <a href="https://javaops.ru/view/basejava" target="_blank"> приложение </a>Vogulev Artem</header>
-<h1>Курс Java SE</h1>
-<footer>Тестовое <a href="https://javaops.ru/view/basejava" target="_blank"> приложение </a>Vogulev Artem</footer>
+<p><a href="resume">Resume List</a></p>
 </body>
 </html>
